<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cadastrar"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Cadastrar" />
        <item
            android:id="@+id/nav_listar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/listar" />


    </group>

    <item android:title="@string/sistema">
        <menu>

            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/sobre" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
