<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.rafaelfioretti.conclusaoandroid.CadastrarActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etEndereco"
        android:hint="@string/endereco"
        android:layout_below="@+id/etCondominio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="26dp"
        android:id="@+id/etCondominio"
        android:hint="@string/condominio"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etSindico"
        android:hint="@string/sindico"
        android:layout_below="@+id/etBlocos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/etBlocos"
        android:hint="@string/blocos"
        android:layout_below="@+id/etEndereco"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="number" />

    <Button
        android:text="@string/Cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/button"
        android:layout_below="@+id/etSindico"
        android:layout_alignRight="@+id/etSindico"
        android:layout_alignEnd="@+id/etSindico"
        android:onClick="cadastrar" />
</RelativeLayout>
